--- a/ResponsiveNav/03/after/index.html
+++ b/ResponsiveNav/03/after/index.html
@@ -10,7 +10,7 @@
     <script src="../../Scripts/bootstrap.min.js"></script>
 </head>
 <body>
-    <header class="container-fluid">
+    <header>
         <nav class="navbar navbar-default" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
